platform/test-proyecto/base/apps/mi-primera-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-primera-app
  namespace: test-proyecto
  labels:
    app.kubernetes.io/name: mi-primera-app
    app.kubernetes.io/part-of: test-proyecto
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mi-primera-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mi-primera-app
        app.kubernetes.io/part-of: test-proyecto
    spec:
      containers:
        - name: mi-primera-app
          # Imagen que se actualizará via CI/CD cuando se haga push al repo de código.
          # registry.local/<project>/<app>:latest apunta al registro interno de Kind.
          image: registry.local/test-proyecto/mi-primera-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
