platform/test-proyecto/base/apps/mi-primera-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-primera-app
  namespace: test-proyecto
  labels:
    app.kubernetes.io/name: mi-primera-app
    app.kubernetes.io/part-of: test-proyecto
    app.kubernetes.io/managed-by: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mi-primera-app.test-proyecto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi-primera-app
                port:
                  name: http
